# CMakeSeries

./: ..gitignore.un~  .gitconfig  README.md
Ep002/HelloApp.dir/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command
Ep002/source/: CMakeLists.txt  main.cpp
Ep003/source/: CMakeLists.txt  main.cpp  static and dynamic libraries.txt
Ep003/source/include/: dog.h
Ep003/source/logger/include/: log.h
Ep003/source/logger/src/: log.cpp
Ep003/source/src/: dog.cpp
Ep004/: CMakeLists.txt
Ep004/src/: main.cpp
Ep005/: CMakeLists.txt  Link Header File.md
Ep005/src/math/: supermath.cpp
Ep005/src/math/include/: supermath.h
Ep006/: CMakeLists.txt
Ep006/src/math/: math.cmake
Ep006/src/stats/: stats.cmake  stats.cpp
Ep007/: CMakeLists.txt
Ep007/src/: main.cpp
Ep008/: 1-message.cmake  2-variable.cmake  3-list_option.cmake  4-flow_ontrol.cmake  5-loops.cmake  6-function.cmake  7-mocro.cmake
Ep009/: CMakeLists.txt  code use in this example.txt
Ep009/src/math/: CMakeLists.txt
Ep009/src/stats/: CMakeLists.txt
Ep010_GUI/: CMakeLists.txt  What is CMake GUI.md
Ep010_GUI/src/: main.cpp
Ep010_GUI/src/stats/: CMakeLists.txt
Ep011_format/: CMakeLists.txt  Formatting Cmake.md  main.cpp  person.cpp
Ep011_format/cmake/: ClangFormat.cmake
Ep012_Targets/: CMakeLists.txt  Imported CMake targets.md  main.cpp  person.h
Ep012_Targets/cmake/: AddFmt.cmake
Ep013_Testing/: CTest basic.md  Unit Testing Frameworks for C and C++.md
Ep013_Testing/Catch2Test/: CMakeLists.txt  Catch2 with CMake.md  main.cpp
Ep013_Testing/Catch2Test/src/: calculator.cpp
Ep013_Testing/Catch2Test/test/: CMakeLists.txt  test_calc.cpp
Ep013_Testing/Catch2Test_test_main/: main.cpp
Ep013_Testing/Catch2Test_test_main/test/: test_runApp.cpp
Ep013_Testing/GoogleTest/: CMakeLists.txt  Google Test with CMake.md  main.cpp
Ep013_Testing/GoogleTest/cmake/: AddGoogleTest.cmake
Ep013_Testing/GoogleTest/src/: calculator.h
Ep013_Testing/GoogleTest/test/: CMakeLists.txt  test_calc.cpp
Ep013_Testing/vcpk_Package_manager/: Install_Catch2_on_Wind.md  vcpk Packege manager.md
Ep014_Doxygen/: .hintrc  CMakeLists.txt  Doxygen.md
Ep014_Doxygen/cmake/: AddCatch2.cmake
Ep014_Doxygen/docs/: CMakeLists.txt  Doxyfile
Ep014_Doxygen/src/: CMakeLists.txt  runApp.cpp
Ep014_Doxygen/test/: CMakeLists.txt
